# DeviceManager

./: .gitignore  CMakeLists.txt
DeviceManager/: .gitignore  CMakeLists.txt  main.cpp
DeviceManager/Utils/: LogManager.cpp  LogManager.h
WinDevice/: .gitignore  CMakeLists.txt
WinDevice/src/: main.cpp
WinDevice/src/Audio/: AudioEnum.h  AudioManager.cpp  AudioManager.h
WinDevice/src/Utils/: CmdUtil.cpp  CmdUtil.h  Log.cpp  Log.h  StringUtil.h  SysInfoUtil.cpp  SysInfoUtil.h  TimeUtil.cpp  TimeUtil.h
WinDevice/src/Video/: ScreenManager.cpp  ScreenManager.h
WinDeviceDemo/: WinDeviceDemo.cpp  WinDeviceDemo.h
